--- a/index.html
+++ b/index.html
@@ -2,61 +2,71 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CreativeTech</title>
-    <link rel="stylesheet" href="./assets/css/lib.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-  </head>
-<body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link">Link2</a>
-              </li>
-            </ul>
-       
-          </div>
-        </div>
-      </nav>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CreativeTech</title>
+  <link rel="stylesheet" href="./assets/css/lib.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+</head>
 
-      
-      <div class="home-banner home-banner-slider">
-        <div>
-          <img src="https://images.unsplash.com/photo-1562155847-c05f7386b204?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bmV3JTIwd2FsbHBhcGVyfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt="">
-        </div>
-        <div>
-          <img src="https://images.unsplash.com/photo-1562155847-c05f7386b204?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bmV3JTIwd2FsbHBhcGVyfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt="">
+<body>
+  <!-- NAV BAR -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container">
+      <a class="navbar-brand" href="#">CreativeTech</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Solutions</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">International</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- HERO -->
+  <section id="home" class="bg-cover hero-section" style="background-image: url(./assets/images/home-banner.jpg);">
+    <div class="overlay"></div>
+    <div class="container text-white text-center">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="display-5">Digital Transformation With Modernized Software<br>
+            And IT Consulting Services</h1>
+          <p class="my-5">The Ninehertz is a decade old custom software development company on a mission to empower <br> businesses with
+            cutting edge technology to thrive in the digital age and to create lasting value by solving <br> the problems
+            digitally. With our priority to innovation, we are adept at developing high-quality, AI-enabled, <br> smart, and
+            robust software solutions for rapid business transformation. Start your journey with us to <br> digitize your
+            organization using state-of-art technology to build a better, bold, and futuristic business <br> empire.</p>
+            <a href="#" class="btn btn-main">Talk To Our Expert</a>
         </div>
       </div>
+    </div>
+  </section>
 
-
-      <script src="./assets/js/lib.js"></script>
-      <script src="./assets/js/app.js"></script>
-    </body>
+  <script src="./assets/js/lib.js"></script>
+  <script src="./assets/js/app.js"></script>
+</body>
 
 </html>
