--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container text-white text-center">
       <div class="row">
         <div class="col-12">
-          <h1 class="display-5">Digital Transformation With Modernized Software<br>
+          <h1>Digital Transformation With Modernized Software<br>
             And IT Consulting Services</h1>
           <p class="my-5">The Ninehertz is a decade old custom software development company on a mission to empower <br> businesses with
             cutting edge technology to thrive in the digital age and to create lasting value by solving <br> the problems
@@ -64,6 +64,238 @@
       </div>
     </div>
   </section>
+  <!-- CARDS (SERVICES) -->
+  <div class="container-fluid">
+    <div class="bgcolor">
+      <h2 class="text-center p-4">Our Robust Suite Of IT Consulting <span class="heading2-color">Services</span> </h2>
+      <p class="text-center sub-title paddingforText">Our offshore IT consulting services along with the AI-powered core
+        helps top companies stay competitive, win new markets and increase shareholder value. Choose from a wide range
+        of custom software development services and get extensive expertise at your disposal.</p>
+      <!-- Cards Section  -->
+
+      <div class="container mt-5">
+        <div class="row mx-5">
+          <!-- first row Cards -->
+          <div class="col-md-3">
+            <div class="card my-3">
+              <img src="./Assets/images/card-logo1.jpg" class="card-img-top my-3 brdrRadius">
+              <div class="card-body">
+                <h5 class="card-title">Mobile App Development </h5>
+                <p class="card-text">As the best app mobile development company, we are experts in developing native and
+                  cross-platform mobile app suitable for all business verticals.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card my-3">
+              <img src="./Assets/images/card-logo2.jpg" class="card-img-top my-3 brdrRadius">
+              <div class="card-body">
+                <h5 class="card-title">Game Development</h5>
+                <p class="card-text">As the best app mobile development company, we are experts in developing native and
+                  cross-platform mobile app suitable for all business verticals.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card my-3">
+              <img src="./Assets/images/card-logo3.jpg" class="card-img-top my-3 brdrRadius">
+              <div class="card-body">
+                <h5 class="card-title">Web Development</h5>
+                <p class="card-text">As the best app mobile development company, we are experts in developing native and
+                  cross-platform mobile app suitable for all business verticals.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card my-3">
+              <img src="./Assets/images/card-logo4.jpg" class="card-img-top my-3 brdrRadius">
+              <div class="card-body">
+                <h5 class="card-title">Low Code Development</h5>
+                <p class="card-text">As the best app mobile development company, we are experts in developing native and
+                  cross-platform mobile app suitable for all business verticals.</p>
+              </div>
+            </div>
+            <!-- Second Row Cards -->
+          </div>
+          <div class="col-md-3 my-4">
+            <div class="card my-3">
+              <img src="./Assets/images/card-logo1.jpg" class="card-img-top my-3 brdrRadius">
+              <div class="card-body">
+                <h5 class="card-title">Mobile App Development </h5>
+                <p class="card-text">As the best app mobile development company, we are experts in developing native and
+                  cross-platform mobile app suitable for all business verticals.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 my-4 ">
+            <div class="card my-3">
+              <img src="./Assets/images/card-logo1.jpg" class="card-img-top my-3 brdrRadius">
+              <div class="card-body">
+                <h5 class="card-title">Mobile App Development </h5>
+                <p class="card-text">As the best app mobile development company, we are experts in developing native and
+                  cross-platform mobile app suitable for all business verticals.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 my-4">
+            <div class="card my-3">
+              <img src="./Assets/images/card-logo1.jpg" class="card-img-top my-3 brdrRadius">
+              <div class="card-body">
+                <h5 class="card-title">Mobile App Development </h5>
+                <p class="card-text">As the best app mobile development company, we are experts in developing native and
+                  cross-platform mobile app suitable for all business verticals.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 my-4">
+            <div class="card my-3">
+              <img src="./Assets/images/card-logo1.jpg" class="card-img-top my-3 brdrRadius">
+              <div class="card-body">
+                <h5 class="card-title">Mobile App Development </h5>
+                <p class="card-text">As the best app mobile development company, we are experts in developing native and
+                  cross-platform mobile app suitable for all business verticals.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- FOOTER -->
+  <footer class="bg-dark text-white pt-5 pb-4">
+    <div class="container text-center text-md-left">
+      <div class="row text-center text-md-left">
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h5 class="text-uppercase mb-4 font-weight-bold text-info">Services</h5>
+          <hr class="mb-4">
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">SaaS Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">CRM Solution</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Outsource App Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Cloud Computing</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Blockchain Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Cryptocurrency Exchange Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">PHP Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">MEAN Stack Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Nodejs Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">DevOps Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Angular JS Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Unity Game Development</a>
+          </p>
+        </div>
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h5 class="text-uppercase mb-4 font-weight-bold text-info">Digital Transformation</h5>
+          <hr class="mb-4">
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">IoT App Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">AR App Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">VR App Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Big Data</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">ibeacon App Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Progressive Web App</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Talend Data Integration</a>
+          </p>
+        </div>
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h5 class="text-uppercase mb-4 font-weight-bold text-info">On Demand Solutions</h5>
+          <hr class="mb-4">
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Taxi App Solution</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Food Delivering App Solutions</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">ELearning App Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Lifestyle App Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Healthcare App Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">On Demand eWallet App Solutions</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Fantasy Sports App Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Grocery Delivery App Development</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Live Streaming App Development</a>
+          </p>
+        </div>
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h5 class="text-uppercase mb-4 font-weight-bold text-info">Useful Links</h5>
+          <hr class="mb-4">
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Contact Us</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">About Us</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Blog</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Case Studies</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Testimonials</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Referral Partner Program</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Privacy Policy</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Disclaimer</a>
+          </p>
+          <p>
+            <a href="#" class="text-white" style="text-decoration: none;">Our Training Program</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="./assets/js/lib.js"></script>
   <script src="./assets/js/app.js"></script>
