--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   </div>
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white pt-5 pb-4">
+  <footer class="bg-color-blue pt-5 pb-4">
     <div class="container text-center text-md-left">
       <div class="row text-center text-md-left">
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
